--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,11 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item ">
-              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item active">
+              <a class="nav-link" href="icoder-bootstrap/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">about</a>
+              <a class="nav-link" href="/icoder-bootstrap/about.html">about</a>
             </li>
             <!-- <li class="nav-item">
                 <a class="nav-link" href="/contact.html">Contact us</a>
@@ -43,10 +43,11 @@
                 <a class="dropdown-item" href="#">Write for us</a>
               </div>
             </li>
-            <li class="nav-item active">
-              <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Contact us</a>
+            <li class="nav-item">
+              <a class="nav-link " href="/icoder-bootstrap/contact.html" tabindex="-1" aria-disabled="true">Contact us</a>
             </li>
           </ul>
+         
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
